--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lt.surge": "react-scripts build && mv ./build/index.html ./build/200.html && surge --domain reactcrashcourse.surge.sh ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
